2002-03-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
	Show up-to-date gnuplot version (from the file VERSION) and the
	last modification date (from the tag $Date: $).

2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.win (CFLAGS) [WIN32]: Added flags to define
 	GP_MATHERR, GP_EXCEPTION and HAVE_STRUCT_EXCEPTION_IN_MATH_H.

	* config/config.nt (HAVE_STRUCT_EXCEPTION_IN_MATH_H,
 	HAVE_STRINGIZE): Added these definitions.

	* src/syscfg.h (STRUCT_EXCEPTION_P_X): Moved definition block to
 	here, from internal.c.  Use GP_EXCEPTION_NAME as the name of this
 	structure.  Clarify behaviour by #defining this to be an empty
 	macro if matherr() doesn't take an argument.

	* src/internal.c (GP_MATHERR): Renamed, was matherr.
	(matherr, exception): Removed #defines, as they are no longer
 	useful.

2002-03-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* PORTING, config/buildvms.com, config/config.cyg, config/config.mgw,
	config/config.nt, config/makefile.dj2, config/makefile.emx,
	config/makefile.g, config/makefile.tc, config/makefile.win: Remove
	ANSI_C symbol. Add PROTOTYPES and HAVE_STRINGIZE where appropriate.

	* config/config.amg, config/makefile.amg: Config file support for
	Amiga SAS/C.

	* configure.in: Add test for struct exception in <math.h>. Remove
	duplicate definition of HAVE_LIBPDF.
	
	* docs/Makefile.in, docs/checkdoc.c, docs/doc2gih.c, docs/doc2hlp.c,
	docs/doc2ipf.c, docs/doc2ms.c, docs/doc2rnh.c, docs/doc2rtf.c,
	docs/doc2tex.c, docs/xref.c, src/bf_test.c: Include syscfg.h instead
	of ansichek.h.

	* src/fit.c, src/stdfn.h, src/util.c, src/util.h: Use STDC_HEADERS
	instead of ANSI_C.

	* src/internal.c(matherr): Cleaner implementation using autoconf and
	config file based symbols.

	* src/syscfg.h: Don't include ansichek.h. Move __PROTO and generic
	declarations here from ansichek.h. Define fallbacks for
	GP_EXCEPTION_NAME and GP_MATHERR.
